@@ -1,3 +1,8 @@
+2009-04-06  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/utils.cc:
+	Fix for memory leak
+
 2009-04-02  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-regex.h:
